// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui small modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"settings icon\\"
        />
        <div
          class=\\"content\\"
        >
          Settings
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"field\\"
          >
            <label
              for=\\"username\\"
            >
              Username:
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Username\\"
                  autocomplete=\\"username\\"
                  name=\\"username\\"
                  placeholder=\\"...\\"
                  type=\\"text\\"
                  value=\\"super\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"field\\"
          >
            <label
              for=\\"personalname\\"
            >
              Personal name (full name, or alias):
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Personal name\\"
                  autocomplete=\\"personalname\\"
                  name=\\"personalname\\"
                  placeholder=\\"...\\"
                  type=\\"text\\"
                  value=\\"Super User\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"field\\"
          >
            <label
              for=\\"email\\"
            >
              Email address:
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Email address\\"
                  autocomplete=\\"email\\"
                  name=\\"email\\"
                  placeholder=\\"jane@example.com\\"
                  type=\\"text\\"
                  value=\\"super@email.com\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"us__reified-form\\"
          >
            <div
              class=\\"field\\"
            >
              <label
                for=\\"password\\"
              >
                New password:
                 
              </label>
              <div
                class=\\"field\\"
              >
                <div
                  class=\\"ui input\\"
                >
                  <input
                    aria-label=\\"New password\\"
                    autocomplete=\\"new-password\\"
                    name=\\"password\\"
                    type=\\"password\\"
                    value=\\"\\"
                  />
                </div>
              </div>
            </div>
            <div
              class=\\"field\\"
            >
              <label
                for=\\"confirmPassword\\"
              >
                Confirm new password:
                 
              </label>
              <div
                class=\\"field\\"
              >
                <div
                  class=\\"ui input\\"
                >
                  <input
                    aria-label=\\"Confirm new password\\"
                    autocomplete=\\"new-password\\"
                    name=\\"confirmPassword\\"
                    type=\\"password\\"
                    value=\\"\\"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=\\"us__reified-message\\"
          >
            <div
              class=\\"ui orange message\\"
            >
              <div
                class=\\"content\\"
              >
                <p>
                  You are currently in anonymous mode. Set an email address and password to become a full user.
                </p>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui grid\\"
        >
          <div
            class=\\"row\\"
          >
            <div
              class=\\"column\\"
            >
              <div
                class=\\"ui fluid buttons\\"
              >
                <button
                  class=\\"ui large primary button\\"
                  type=\\"submit\\"
                >
                  Save
                </button>
                <div
                  class=\\"or\\"
                />
                <button
                  class=\\"ui large button\\"
                  tabindex=\\"0\\"
                >
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>"
`;

exports[`Render 1 1 2`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui small modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"settings icon\\"
        />
        <div
          class=\\"content\\"
        >
          Settings
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"field\\"
          >
            <label
              for=\\"username\\"
            >
              Username:
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Username\\"
                  autocomplete=\\"username\\"
                  name=\\"username\\"
                  placeholder=\\"...\\"
                  type=\\"text\\"
                  value=\\"super\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"field\\"
          >
            <label
              for=\\"personalname\\"
            >
              Personal name (full name, or alias):
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Personal name\\"
                  autocomplete=\\"personalname\\"
                  name=\\"personalname\\"
                  placeholder=\\"...\\"
                  type=\\"text\\"
                  value=\\"Super User\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"field\\"
          >
            <label
              for=\\"email\\"
            >
              Email address:
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Email address\\"
                  autocomplete=\\"email\\"
                  name=\\"email\\"
                  placeholder=\\"jane@example.com\\"
                  type=\\"text\\"
                  value=\\"super@email.com\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"us__reified-form\\"
          >
            <div
              class=\\"field\\"
            >
              <label
                for=\\"password\\"
              >
                New password:
                 
              </label>
              <div
                class=\\"field\\"
              >
                <div
                  class=\\"ui input\\"
                >
                  <input
                    aria-label=\\"New password\\"
                    autocomplete=\\"new-password\\"
                    name=\\"password\\"
                    type=\\"password\\"
                    value=\\"\\"
                  />
                </div>
              </div>
            </div>
            <div
              class=\\"field\\"
            >
              <label
                for=\\"confirmPassword\\"
              >
                Confirm new password:
                 
              </label>
              <div
                class=\\"field\\"
              >
                <div
                  class=\\"ui input\\"
                >
                  <input
                    aria-label=\\"Confirm new password\\"
                    autocomplete=\\"new-password\\"
                    name=\\"confirmPassword\\"
                    type=\\"password\\"
                    value=\\"\\"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=\\"us__reified-message\\"
          >
            <div
              class=\\"ui orange message\\"
            >
              <div
                class=\\"content\\"
              >
                <p>
                  You are currently in anonymous mode. Set an email address and password to become a full user.
                </p>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui grid\\"
        >
          <div
            class=\\"row\\"
          >
            <div
              class=\\"column\\"
            >
              <div
                class=\\"ui fluid buttons\\"
              >
                <button
                  class=\\"ui large primary button\\"
                  type=\\"submit\\"
                >
                  Save
                </button>
                <div
                  class=\\"or\\"
                />
                <button
                  class=\\"ui large button\\"
                  tabindex=\\"0\\"
                >
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>"
`;

exports[`Render 1 1 4`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui small modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"settings icon\\"
        />
        <div
          class=\\"content\\"
        >
          Settings
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"field\\"
          >
            <label
              for=\\"username\\"
            >
              Username:
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Username\\"
                  autocomplete=\\"username\\"
                  name=\\"username\\"
                  placeholder=\\"...\\"
                  type=\\"text\\"
                  value=\\"super\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"field\\"
          >
            <label
              for=\\"personalname\\"
            >
              Personal name (full name, or alias):
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Personal name\\"
                  autocomplete=\\"personalname\\"
                  name=\\"personalname\\"
                  placeholder=\\"...\\"
                  type=\\"text\\"
                  value=\\"New Name\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"field\\"
          >
            <label
              for=\\"email\\"
            >
              Email address:
               
            </label>
            <div
              class=\\"field\\"
            >
              <div
                class=\\"ui input\\"
              >
                <input
                  aria-label=\\"Email address\\"
                  autocomplete=\\"email\\"
                  name=\\"email\\"
                  placeholder=\\"jane@example.com\\"
                  type=\\"text\\"
                  value=\\"new@email.com\\"
                />
              </div>
            </div>
          </div>
          <div
            class=\\"us__reified-form\\"
          >
            <div
              class=\\"field\\"
            >
              <label
                for=\\"password\\"
              >
                New password:
                 
              </label>
              <div
                class=\\"field\\"
              >
                <div
                  class=\\"ui input\\"
                >
                  <input
                    aria-label=\\"New password\\"
                    autocomplete=\\"new-password\\"
                    name=\\"password\\"
                    type=\\"password\\"
                    value=\\"\\"
                  />
                </div>
              </div>
            </div>
            <div
              class=\\"field\\"
            >
              <label
                for=\\"confirmPassword\\"
              >
                Confirm new password:
                 
              </label>
              <div
                class=\\"field\\"
              >
                <div
                  class=\\"ui input\\"
                >
                  <input
                    aria-label=\\"Confirm new password\\"
                    autocomplete=\\"new-password\\"
                    name=\\"confirmPassword\\"
                    type=\\"password\\"
                    value=\\"\\"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=\\"us__reified-message\\"
          >
            <div
              class=\\"ui orange message\\"
            >
              <div
                class=\\"content\\"
              >
                <p>
                  You are currently in anonymous mode. Set an email address and password to become a full user.
                </p>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui grid\\"
        >
          <div
            class=\\"row\\"
          >
            <div
              class=\\"column\\"
            >
              <div
                class=\\"ui fluid buttons\\"
              >
                <button
                  class=\\"ui large primary button\\"
                  type=\\"submit\\"
                >
                  Save
                </button>
                <div
                  class=\\"or\\"
                />
                <button
                  class=\\"ui large button\\"
                  tabindex=\\"0\\"
                >
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>"
`;

exports[`Render 2 1 1`] = `
"<body
  class=\\"\\"
>
  <div
    id=\\"root\\"
  />
  <div />
</body>"
`;
